@@ -6,6 +6,7 @@ version 0.6
 	Added Histogram plot type support to logplot (--type hist)
 	Added urlparse utility/API. See README for details
 	Added urljoin utility/API. See README for details
+	Added logtools.join_backends module with SQLAlchemy backend implementation (added sqlalchemy to install_requires)
 	
 version 0.5
 	Added qps utility - Parse timestamps from log stream and calculate qps over sliding time window		
